# Alex19901509-online_platform-electronics_trading_network

./: README.md  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py
network/templates/: home.html
network/templates/network/: home.html  network_node_form.html  product_form.html  supplier_form.html
network/templates/registration/: login.html  register.html
